--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "~4.15.2",
     "morgan": "~1.8.1",
     "nunjucks": "^3.0.1",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "socket.io": "^1.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
